--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
   I couldn't implement the tailwindcss because I'm having problem installing it to my local machine
   and It's my first time getting to tailwincss(I'm currently switching to tailwincss)
 
-  However please do check the calendar app, thank you idolo
+  However please do check the calendar app, thank you idolo :)
 
 */
 
